--- a/templates/start_campaign.html
+++ b/templates/start_campaign.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+	{% if get == 0 %}
 	<form method="post">
 		{% csrf_token %}
 		{{form.campaign.label_tag}}
@@ -15,7 +16,7 @@
 		<textarea style="margin: 2px; height: 222px; width: 548px;" id="id_patients" rows="10" cols="40" name="patients">{% for items in content %} {{items.primary_email}},	{% endfor %}</textarea>
 		<br>
 	<input type="submit" value="start campaign">
-		{% if get == 1 %}
+		{% else %}
 			You cant sent the campaign to following people as they are not your patients:
 			{% for items in not_patient %}
 				<p>{{items}}</p>
